Basic UI with no API interaction

--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 150px">
+<div class="container">
   <div class="row d-flex">
     <div class="col-8">
       <h1>Wellcome to YourMusLab!</h1>
