--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-nav-bar></app-nav-bar> <router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
+<div style="margin-top: 150px"><router-outlet></router-outlet></div>
