Music service set up

--- a/client-app/src/app/music-browser/track-item/track-item.component.html
+++ b/client-app/src/app/music-browser/track-item/track-item.component.html
@@ -1,7 +1,7 @@
 <div class="row" *ngIf="track" style="margin-top: 10px; cursor: pointer">
   <div class="col-3">
     <img
-      src="{{ track.filePath }}"
+      src="{{ track.picturePath }}"
       alt="Album picture"
       class="img-fluid"
       style="max-height: 100px"
