--- a/client-app/src/app/music-browser/music-browser.component.html
+++ b/client-app/src/app/music-browser/music-browser.component.html
@@ -1,19 +1,27 @@
 <div class="container d-flex">
-  <section class="col-3 ">
+  <section class="col-3">
     <h5>Search</h5>
-    <input type="text" class="form-control mb-4">
+    <input
+      type="text"
+      class="form-control mb-4"
+      #search
+      (change)="onSearch()"
+    />
     <h5>Genres</h5>
-    <select class="form-select mb-4">
+    <select class="form-select mb-4" (change)="onGenreSelected($event)">
       <option *ngFor="let genre of genres" [value]="genre.name">
         {{ genre.name }}
       </option>
     </select>
     <h5>Authors</h5>
-    <select class="form-select mb-4">
+    <select class="form-select mb-4" (change)="onAuthorSelected($event)">
       <option *ngFor="let author of authors" [value]="author.name">
         {{ author.name }}
       </option>
     </select>
+    <button class="btn btn-success" style="width: 100%" (click)="getTracks()">
+      Search
+    </button>
   </section>
   <section class="col-9" style="margin-left: 20px">
     <h3 style="margin-bottom: 30px">Look at what we've found</h3>
