Music player implemented

--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-nav-bar></app-nav-bar>
 <div style="margin-top: 150px"><router-outlet></router-outlet></div>
+<app-music-player></app-music-player>
