--- a/client-app/src/app/music-browser/music-browser.component.html
+++ b/client-app/src/app/music-browser/music-browser.component.html
@@ -28,6 +28,7 @@
     <app-track-item
       *ngFor="let track of tracks"
       [track]="track"
+      (click)="onTrackSelected(track)"
     ></app-track-item>
   </section>
 </div>
