--- a/client-app/src/app/core/nav-bar/nav-bar.component.html
+++ b/client-app/src/app/core/nav-bar/nav-bar.component.html
@@ -3,7 +3,8 @@
 >
   <nav class="my-2 text-uppercase fs-4">
     <a routerLink="/" class="p-2">Home</a>
-    <a routerLink="/account" class="p-2">Account</a>
+    <a routerLink="/account/login" class="p-2">Login</a>
+    <a routerLink="/account/register" class="p-2">Sing up</a>    
     <a routerLink="/browse" class="p-2">Browse</a>
   </nav>
 </header>
