--- a/client-app/src/app/account/login/login.component.html
+++ b/client-app/src/app/account/login/login.component.html
@@ -1,13 +1,16 @@
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
-<h1>LOGIN</h1>
+<div class="d-flex justify-content-center mt-5">
+  <div class="col-3">
+    <form>
+      <div class="text-center mb-4">
+        <h1 class="mb-3">Login</h1>
+        <input type="email" autocomplete="off" class="form-control" placeholder="Enter email" />
+        <input type="password" class="form-control mt-4" placeholder="Enter password"/>
+      </div>
+      <div class="d-grid">
+        <button type="sumbit" class="btn btn-primary mt-3">
+          Sign in
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
