--- a/client-app/src/app/account/register/register.component.html
+++ b/client-app/src/app/account/register/register.component.html
@@ -1,15 +1,18 @@
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
-<h1>REGISTER</h1>
+<div class="d-flex justify-content-center mt-5">
+    <div class="col-3">
+      <form>
+        <div class="text-center mb-4">
+          <h1 class="mb-3">Sign up</h1>
+          <input type="text" autocomplete="off" class="form-control mt-4" placeholder="Enter your name"/>
+          <input type="email" autocomplete="off" class="form-control mt-4" placeholder="Enter email" />
+          <input type="password" class="form-control mt-4" placeholder="Enter password"/>
+        </div>
+        <div class="d-grid">
+          <button type="sumbit" class="btn btn-primary mt-3">
+            Sign up
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
 
