--- a/client-app/src/app/account/register/register.component.html
+++ b/client-app/src/app/account/register/register.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex justify-content-center mt-5">
     <div class="col-3">
-      <form>
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="text-center mb-4">
           <h1 class="mb-3">Sign up</h1>
-          <input type="text" autocomplete="off" class="form-control mt-4" placeholder="Enter your name"/>
-          <input type="email" autocomplete="off" class="form-control mt-4" placeholder="Enter email" />
-          <input type="password" class="form-control mt-4" placeholder="Enter password"/>
+          <input type="text" autocomplete="off" class="form-control mt-4" placeholder="Enter your name" [formControl]="registerForm.controls['username']"/>
+          <input type="email" autocomplete="off" class="form-control mt-4" placeholder="Enter email" [formControl]="registerForm.controls['email']" />
+          <input type="password" class="form-control mt-4" placeholder="Enter password" [formControl]="registerForm.controls['password']"/>
         </div>
         <div class="d-grid">
           <button type="sumbit" class="btn btn-primary mt-3">
