--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-loader *ngIf="isLoading"></app-loader>
 <app-nav-bar></app-nav-bar>
 <div style="margin-top: 150px"><router-outlet></router-outlet></div>
 <app-music-player></app-music-player>
