--- a/client-app/src/app/core/music-player/music-player.component.html
+++ b/client-app/src/app/core/music-player/music-player.component.html
@@ -25,7 +25,12 @@
         ></audio>
       </div>
       <div class="col-3">
-        <div class="row">
+        <div
+          class="row"
+          (click)="onTrackLiked()"
+          style="cursor: pointer"
+          *ngIf="!isCurrentTrackLiked"
+        >
           <div class="col-2">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -42,6 +47,31 @@
           </div>
           <div class="col-8">
             <h5>LIKE</h5>
+          </div>
+        </div>
+        <div
+          class="row"
+          (click)="onTrackUnliked()"
+          style="cursor: pointer"
+          *ngIf="isCurrentTrackLiked"
+        >
+          <div class="col-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30"
+              height="30"
+              fill="currentColor"
+              class="bi bi-heart-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
+              />
+            </svg>
+          </div>
+          <div class="col-8">
+            <h5>UNLIKE</h5>
           </div>
         </div>
       </div>
