--- a/client-app/src/app/core/loader/loader.component.html
+++ b/client-app/src/app/core/loader/loader.component.html
@@ -1,5 +1,7 @@
-<div
-  class="loader-div h-100 d-flex align-items-center justify-content-center"
->
-  <img src="/assets/loader.gif" alt="Loading..." />
+<div class="loader-div h-100 d-flex align-items-center justify-content-center">
+  <div class="lds-facebook">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 </div>
