Forgot password feature implemented on client app

--- a/client-app/src/app/account/login/login.component.html
+++ b/client-app/src/app/account/login/login.component.html
@@ -17,6 +17,9 @@
           [formControl]="loginForm.controls['password']"
         />
       </div>
+      <a routerLink="/account/forgot-password" class="mt-4" style="text-decoration: underline; cursor: pointer"
+        >Forgot password?</a
+      >
       <div class="d-grid">
         <button type="sumbit" class="btn btn-primary mt-3">Sign in</button>
       </div>
