--- a/client-app/src/app/account/password-reset/password-reset.component.html
+++ b/client-app/src/app/account/password-reset/password-reset.component.html
@@ -9,16 +9,26 @@
           class="form-control"
           placeholder="Enter email of your account"
           [formControl]="passwordResetForm.controls['email']"
+          [class.text-danger]="email && email.invalid"
         />
         <input
           type="password"
           class="form-control mt-4"
           placeholder="Enter new password"
           [formControl]="passwordResetForm.controls['newPassword']"
+          [class.text-danger]="newPassword && newPassword.invalid"
         />
       </div>
       <div class="d-grid">
-        <button type="sumbit" class="btn btn-primary mt-3">Send email</button>
+        <button
+          type="sumbit"
+          class="btn btn-primary mt-3"
+          [disabled]="
+            (email && email.invalid) || (newPassword && newPassword.invalid)
+          "
+        >
+          Send email
+        </button>
       </div>
     </form>
   </div>
