Login/Sign up error handling

--- a/client-app/src/app/account/login/login.component.html
+++ b/client-app/src/app/account/login/login.component.html
@@ -3,6 +3,7 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="text-center mb-4">
         <h1 class="mb-3">Login</h1>
+        <p class="text-danger mt-4" *ngIf="error">{{error}}</p>
         <input
           type="email"
           autocomplete="off"
